chore: refactor proxy request handlers/processors (#3085)
* chore: drop CommonBeanProxy

Refs: XRDDEV-3037

* chore: extract ClientAuthenticationService from MessageProcessorBase

Refs: XRDDEV-3037

* chore: fix after merge

Refs: XRDDEV-3037

* chore: extract IdentifierValidator from MessageProcessorBase

Refs: XRDDEV-3037

* chore: move validateSoapActionHeader to SoapUtils from MessageProcessorBase

Refs: XRDDEV-3037

* chore: move duplicate methods to MessageProcessorBase

Refs: XRDDEV-3037

* chore: sonar fix

Refs: XRDDEV-3037

* chore: checkstyle

Refs: XRDDEV-3037

* chore: collect openbao logs on e2e and ss system tests

Refs: XRDDEV-3037

* chore: increase proxy-ui-api and op-monitor mem limits

Refs: XRDDEV-3037

* chore: extract OpMonitoringDataHelper

Refs: XRDDEV-3037